project2-code/quicksort/quicksort-13105603.out
c++ -c -O2  -fopenmp quicksort.cpp -o quicksort.o 
quicksort.cpp: In function ‘void quicksort(double*, int)’:
quicksort.cpp:48:36: error: expected ‘)’ before ‘[’ token
 #pragma omp task firstprivate(data [0:length], left, right)
                                    ^
quicksort.cpp:50:36: error: expected ‘)’ before ‘[’ token
 #pragma omp task firstprivate(data [left:length], left, right)
                                    ^
make: *** [Makefile:12: quicksort.o] Error 1
/var/spool/slurm/slurmd/state/job13105603/slurm_script: line 12: ./quicksort: No such file or directory
/var/spool/slurm/slurmd/state/job13105603/slurm_script: line 12: ./quicksort: No such file or directory
/var/spool/slurm/slurmd/state/job13105603/slurm_script: line 12: ./quicksort: No such file or directory
/var/spool/slurm/slurmd/state/job13105603/slurm_script: line 12: ./quicksort: No such file or directory
rm *.o quicksort
rm: cannot remove '*.o': No such file or directory
rm: cannot remove 'quicksort': No such file or directory
make: *** [Makefile:16: clean] Error 1
